--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,9 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
@@ -28,4 +31,63 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
+}
+
+.logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
+  position: absolute;
+  left: 64px;
+  top: 30px;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+.header__title {
+  margin: 0;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+  width: 730px;
+  display: flex;
+  align-items: center;
+  padding-left: 64px;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  font-size: 18px;
+  line-height: 25px;
+  width: 388px;
+}
+
+.header__main-illustration {
+  background-image: url(../images/header-image.png);
+  width: 765px;
+  height: 608px;
+  background-size: cover;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.square-pic {
+  width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0px;
 }
