--- a/styles/style.css
+++ b/styles/style.css
@@ -15,38 +15,22 @@
   max-height: 756px;
   background-color: #f2f2f2;
   display: flex;
+  align-items: center;
   position: relative;
-  /* выше установили ограничения для секции */
-}
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-}
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
 }
 
 .logo {
+  background-size: 100%;
   width: 183px;
   height: 32px;
 }
 
 .logo_place_header {
-  background-image: url(../images/logo_place_header.svg);
   position: absolute;
   left: 64px;
   top: 30px;
-}
-
-.logo_place_footer {
-  background-image: url(../images/logo_place_footer.svg);
+  z-index: 1;
+  
 }
 
 .header__title {
@@ -55,9 +39,8 @@
   line-height: 96px;
   font-weight: bold;
   width: 730px;
-  display: flex;
-  align-items: center;
   padding-left: 64px;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -66,28 +49,255 @@
   bottom: 30px;
   font-size: 18px;
   line-height: 25px;
+  font-weight: normal;
   width: 388px;
+  z-index: 2;
 }
 
 .header__main-illustration {
-  background-image: url(../images/header-image.png);
   width: 765px;
   height: 608px;
   background-size: cover;
   position: absolute;
-  right: 0px;
-  bottom: 0px;
+  right: 0;
+  bottom: 0;
 }
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
-.square-pic {
+.header__square-pic {
   width: 568px;
   height: 568px;
   background-color: #2f80ed;
   position: absolute;
   top: 64px;
-  right: 0px;
+  right: 0;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.two-colums {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin: 0;
+  color: #2f80ed;
+  width: 175px;
+}
+
+.two-columns__main-text {
+  font-size: 24px;
+  line-height: 34px;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.information-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits {
+  padding: 100px 0;
+}
+
+.section {
+  width: 60%;
+  text-align: center;
+  margin: 0;
+}
+
+.section-title {
+  font-size: 60px;
+  line-height: 69px;
+  margin-bottom: 20px;
+}
+
+.section-subtitle {
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.table {
+  display: flex;
+  width: 1100px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__cell:last-child {
+  margin-right: 0;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin: 0;
+}
+
+.table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  margin: 20px 0 0;
+}
+
+.feynman {
+  background-color: #f2f2f2;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 790px;
+  font-size: 36px;
+  line-height: 51px;
+  padding-top: 100px;
+}
+
+.feynman__main-illustration {
+  /* background-image: url(../images/header-image.png); */
+  width: 867px;
+  height: 637px;
+  background-size: cover;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.feynman__title {
+  width: 648px;
+  font-size: 120px;
+  line-height: 1.15;
+  margin: 0;
+  z-index: 1;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  margin-top: 70px;
+  z-index: 1;
+}
+
+.feynman__link {
+  text-decoration: none;
+  color: #000000;
+  z-index: 1;
+  position: absolute;
+  right: 48px;
+  top: 395px;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  padding: 90px 0;
+  color: white;
+  overflow: hidden;
+  position: relative;
+}
+
+.table_theme_dark {
+  z-index: 1;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
+  margin-right: 20px;
+  margin-top: 80px;
+}
+
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  width: 877px;
+  height: 877px;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
+}
+
+.section-title_theme_dark {
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  z-index: 1;
+}
+
+.footer {
+  font-size: 18px;
+  line-height: 30px;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  color: white;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 90%;
+  padding: 60px 0 40px;
+  height: 250px;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content-copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.footer__author {
+  margin: 18px 0;
+  line-height: 25px;
+}
+
+.footer__column-heading {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer__column-link {
+  text-decoration: none;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.footer__column-link:last-child {
+  margin-bottom: 0;
 }
