--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@
   left: 64px;
   top: 30px;
   z-index: 1;
-  
 }
 
 .header__title {
@@ -117,31 +116,28 @@
   margin-bottom: 0;
 }
 
-.information-content {
+.digits {
+  padding: 100px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.digits {
-  padding: 100px 0;
-}
-
-.section {
+.section-title {
+  font-size: 60px;
+  line-height: 69px;
+  padding-bottom: 20px;
   width: 60%;
   text-align: center;
   margin: 0;
 }
 
-.section-title {
-  font-size: 60px;
-  line-height: 69px;
-  margin-bottom: 20px;
-}
-
 .section-subtitle {
   font-size: 24px;
   line-height: 34px;
+  width: 60%;
+  text-align: center;
+  margin: 0;
 }
 
 .table {
@@ -215,7 +211,7 @@
   z-index: 1;
   position: absolute;
   right: 48px;
-  top: 395px;
+  top: 50%;
 }
 
 .kaufman {
@@ -224,6 +220,9 @@
   color: white;
   overflow: hidden;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .table_theme_dark {
@@ -269,7 +268,7 @@
   margin: 0 auto;
   width: 90%;
   padding: 60px 0 40px;
-  height: 250px;
+  min-height: 250px;
 }
 
 .footer__column {
@@ -277,7 +276,7 @@
   flex-direction: column;
 }
 
-.footer__column_content-copyright {
+.footer__column_content_copyright {
   flex-basis: 711px;
   justify-content: space-between;
 }
@@ -290,14 +289,17 @@
 .footer__column-heading {
   font-weight: bold;
   margin-bottom: 20px;
+  margin-top: 0;
+  font-size: 18px;
+}
+
+.footer__column-links {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer__column-link {
   text-decoration: none;
   color: white;
-  margin-bottom: 10px;
-}
-
-.footer__column-link:last-child {
-  margin-bottom: 0;
 }
