--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,12 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+* {
+  outline-width: 1px;
+  outline-style: solid;
+  outline-color: green; //или другой удобный цвет
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -17,6 +23,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .logo {
@@ -74,16 +81,29 @@
   position: absolute;
   top: 64px;
   right: 0;
+  transform: rotate(-15deg);
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation: rotation 20s linear infinite;
 }
 
 .description {
-  display: flex;
-  justify-content: center;
   margin-top: 100px;
 }
 
 .two-colums {
   display: flex;
+  margin: auto;
   width: 80%;
   justify-content: space-between;
 }
@@ -175,14 +195,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 790px;
+  min-height: 790px;
   font-size: 36px;
   line-height: 51px;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .feynman__main-illustration {
-  /* background-image: url(../images/header-image.png); */
   width: 867px;
   height: 637px;
   background-size: cover;
