Спринт 2, отправка на проверку 2

--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -3,7 +3,7 @@
   left: 64px;
   bottom: 30px;
   font-size: 18px;
-  line-height: 25px;
+  line-height: 1.4;
   font-weight: normal;
   width: 388px;
   z-index: 2;
