--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,7 +1,7 @@
 .header__title {
   margin: 0;
   font-size: 102px;
-  line-height: 96px;
+  line-height: 0.95;
   font-weight: bold;
   width: 730px;
   padding-left: 64px;
