--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,14 +4,14 @@
 @import url(./__link/feynman__link.css);
 
 .feynman {
-  background-color: #f2f2f2;
+  background-color: hsl(0, 0%, 95%);
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 790px;
   font-size: 36px;
-  line-height: 51px;
+  line-height: 1.4;
   padding-top: 80px;
 }
 
