--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,7 +8,7 @@
 
 .footer {
   font-size: 18px;
-  line-height: 30px;
+  line-height: 1.65;
   min-height: 350px;
   background-color: #1f1f1f;
   color: white;
