--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,10 +1,11 @@
 .khan__buy-link {
   font-size: 30px;
-  line-height: 42px;
+  line-height: 1.4;
   margin: 0;
   color: #2f80ed;
   text-decoration: none;
   transition: opacity 0.5s linear;
+  align-self: flex-start;
 }
 
 .khan__buy-link:hover {
