--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -2,7 +2,7 @@
 
 .section-subtitle {
   font-size: 24px;
-  line-height: 34px;
+  line-height: 1.4;
   width: 60%;
   text-align: center;
   margin: 0;
