--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,8 @@
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/footer/footer.css);
+* {
+  outline-width: 1px;
+  outline-style: solid;
+  outline-color: green; //или другой удобный цвет
+}
